--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,12 +1,12 @@
 @import "../variables";
 
 .nav {
+  position: fixed;
   padding: 1em $gap;
   display: grid;
   grid-template-columns: repeat(2, min-content);
   background-color: $black;
   justify-content: space-between;
-  border-radius: 10px 10px 0 0;
   width: 100%;
   &__nav {
     text-decoration: none;
