--- a/src/routes/profile/profile.scss
+++ b/src/routes/profile/profile.scss
@@ -4,26 +4,50 @@
 .profile {
   background-color: $white;
   display: grid;
-  grid-template-rows: repeat(3, max-content);
+  grid-template-rows: 1fr max-content;
   justify-items: center;
-  align-content: space-between;
-  row-gap: $gap;
   padding-top: 3.3rem;
   height: 100vh;
   &__state {
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-rows: repeat(3, min-content);
+    row-gap: $gap;
+    justify-items: center;
+    align-content: center;
     &__img {
       width: 100px;
       height: 100px;
       box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
       border-radius: 50%;
-      margin-right: $gap;
     }
     &__text {
       font-size: 1.5rem;
       font-weight: bold;
       color: $black;
+    }
+  }
+  &__updateProfile {
+    background-color: $black;
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    column-gap: $gap;
+    border-radius: 40px;
+    padding: 0.4em $gap;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    &__input {
+      @extend %input;
+      padding: 0;
+      font-size: 1rem;
+      color: $white;
+    }
+    &__submit {
+      @extend %button;
+      font-size: 1rem;
+      color: $white;
+      transition: 0.2s ease-in-out;
+      &:hover {
+        color: $main;
+      }
     }
   }
   &__logout {
