--- a/src/components/_extends.scss
+++ b/src/components/_extends.scss
@@ -6,7 +6,6 @@
   border: none;
   padding: 0.3em 0.8em;
   font-size: 1.2rem;
-  color: $white;
   &:-webkit-autofill,
   &:-webkit-autofill:hover,
   &:-webkit-autofill:focus,
@@ -14,7 +13,7 @@
     transition: background-color 5000s ease-in-out 0s;
     -webkit-transition: background-color 9999s ease-out;
     -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
-    -webkit-text-fill-color: $white !important;
+    -webkit-text-fill-color: $black !important;
   }
 }
 %button {
@@ -29,10 +28,10 @@
   padding: 0.3em 0.8em;
   color: $white;
   background-color: $black;
-  border: 1px solid $main;
+  border-radius: 5px;
   transition: 0.2s ease-in-out;
   &:hover {
-    border: 1px solid $sub;
+    color: $main;
   }
 }
 %list {
