--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   width: 100%;
   &__nav {
+    font-size: 1rem;
     text-decoration: none;
     color: $white;
     font-weight: bold;
