--- a/src/components/twitts/twitts.scss
+++ b/src/components/twitts/twitts.scss
@@ -8,7 +8,7 @@
   row-gap: $gap;
   &__profile {
     display: grid;
-    grid-template-columns: max-content 1fr max-content;
+    grid-template-columns: max-content 1fr max-content max-content;
     column-gap: $gap;
     align-items: flex-end;
     &__img {
@@ -17,6 +17,11 @@
       border-radius: 50%;
     }
     &__name {
+      font-size: 0.9rem;
+      color: rgba(0, 0, 0, 0.5);
+      font-weight: bold;
+    }
+    &__time {
       font-size: 0.9rem;
       color: rgba(0, 0, 0, 0.5);
       font-weight: bold;
@@ -94,35 +99,44 @@
     display: block;
     width: 100%;
     height: 2px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     margin-bottom: $gap;
   }
 }
-
-.twitt__editForm {
+.modify {
   position: absolute;
   top: -5px;
-  background-color: $black;
-  padding: 0.2em $gap;
-  border-radius: 0 10px 10px 10px;
-  width: 18rem;
-  display: flex;
-  &__text {
-    font-size: 1rem;
-    outline: none;
-    border: none;
+  .twitt__editForm {
     background-color: $black;
-    width: 100%;
-    color: $white;
-  }
-  &__submit {
-    @extend %button;
-    font-size: 1rem;
-    color: $white;
-    margin-left: $gap;
-    transition: 0.2s ease-in-out;
-    &:hover {
-      color: $main;
+    padding: 0.2em $gap;
+    border-radius: 0 10px 10px 10px;
+    width: 18rem;
+    display: flex;
+    &__text {
+      font-size: 1rem;
+      outline: none;
+      border: none;
+      background-color: $black;
+      width: 100%;
+      color: $white;
     }
+    &__submit {
+      @extend %button;
+      font-size: 1rem;
+      color: $white;
+      margin-left: $gap;
+      transition: 0.2s ease-in-out;
+      &:hover {
+        color: $main;
+      }
+    }
+  }
+  .Merror {
+    margin-left: 0.8em;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: red;
+    opacity: 0;
+    transition: 0.2s ease-in-out;
   }
 }
