--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -8,6 +8,7 @@
   background-color: $black;
   justify-content: space-between;
   width: 100%;
+  z-index: 10;
   &__nav {
     font-size: 1rem;
     text-decoration: none;
