--- a/src/components/twitts/twitts.scss
+++ b/src/components/twitts/twitts.scss
@@ -3,6 +3,7 @@
 
 .twitt {
   @extend %list;
+  position: relative;
   display: grid;
   grid-template-rows: repeat(4, max-content);
   row-gap: $gap;
@@ -18,6 +19,7 @@
     }
     &__name {
       font-size: 0.9rem;
+      font-weight: bold;
       color: rgba(0, 0, 0, 0.5);
       font-weight: bold;
     }
@@ -33,6 +35,7 @@
       &__edit {
         @extend %button;
         font-size: 1rem;
+        color: $black;
         font-weight: bold;
         transition: 0.2s ease-in-out;
         &:hover {
@@ -42,9 +45,10 @@
       &__delete {
         @extend %button;
         font-size: 1rem;
+        color: $black;
         transition: 0.2s ease-in-out;
         &:hover {
-          color: $main;
+          color: red;
         }
       }
     }
@@ -76,21 +80,44 @@
     column-gap: $gap;
     justify-content: flex-end;
     &__good {
-      @extend %button;
-      font-size: 0.8rem;
-      color: rgba(0, 0, 0, 0.5);
-      transition: 0.2s ease-in-out;
-      &:hover {
-        color: $main;
+      display: flex;
+      align-items: center;
+      &__btn {
+        @extend %button;
+        font-size: 0.8rem;
+        color: rgba(0, 0, 0, 0.5);
+        transition: 0.2s ease-in-out;
+        &:hover {
+          color: $main;
+        }
+      }
+      &__count {
+        margin-left: 0.4em;
+        font-size: 1rem;
+        font-weight: bold;
+        cursor: default;
+        color: rgba(0, 0, 0, 0.5);
       }
     }
     &__bad {
-      @extend %button;
-      font-size: 0.8rem;
-      color: rgba(0, 0, 0, 0.5);
-      transition: 0.2s ease-in-out;
-      &:hover {
-        color: $main;
+      display: flex;
+      align-items: center;
+      &__btn {
+        @extend %button;
+        font-size: 0.8rem;
+        color: rgba(0, 0, 0, 0.5);
+        transition: 0.2s ease-in-out;
+        &:hover,
+        &:checked {
+          color: $main;
+        }
+      }
+      &__count {
+        margin-left: 0.4em;
+        font-size: 1rem;
+        font-weight: bold;
+        cursor: default;
+        color: rgba(0, 0, 0, 0.5);
       }
     }
   }
@@ -102,10 +129,18 @@
     background-color: rgba(0, 0, 0, 0.2);
     margin-bottom: $gap;
   }
+  &__editmessage {
+    position: absolute;
+    bottom: 19%;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.5);
+  }
 }
 .modify {
   position: absolute;
   top: -5px;
+  z-index: 2;
   .twitt__editForm {
     background-color: $black;
     padding: 0.2em $gap;
