--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -2,21 +2,22 @@
 @import "../../components/variables";
 
 .homeGrid {
-  display: grid;
-  grid-template-rows: 1fr min-content;
   background-color: $main;
   padding-top: 3.3rem;
   height: 100vh;
+  padding-bottom: 3.3rem;
 }
 .twitts {
   background-color: $white;
   padding: $gap;
+  height: 100%;
   overflow: auto;
   &::-webkit-scrollbar {
-    width: 5px;
+    width: 4px;
     background-color: gray;
   }
   &::-webkit-scrollbar-thumb {
     background-color: $black;
+    border-radius: 2px;
   }
 }
